// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cli help option should print help page 1`] = `
"Usage: index [options] [command]

Options:
  -V, --version               output the version number
  -h, --help                  output usage information

Commands:
  s|search [options] [query]  fuzzy search snippets by id
  t|tag [options] [id]        view snippets by tag
  v|view [options] [id]       view snippet with id

Examples:
  view all
  search flatten --output json all
  tag --print ic array"
`;

exports[`Cli help option should print help page 2`] = `
"Usage: index [options] [command]

Options:
  -V, --version               output the version number
  -h, --help                  output usage information

Commands:
  s|search [options] [query]  fuzzy search snippets by id
  t|tag [options] [id]        view snippets by tag
  v|view [options] [id]       view snippet with id

Examples:
  view all
  search flatten --output json all
  tag --print ic array"
`;

exports[`Cli help option should print help page for search command 1`] = `
"Usage: s|search [options] [query]

fuzzy search snippets by id

Options:
  -c, --cp               copy code to clipboard
  -j, --json             output in json format
  -l, --layout <layout>  print in specified layout (default: \\"iced\\")
  -h, --help             output usage information"
`;

exports[`Cli help option should print help page for search command 2`] = `
"Usage: s|search [options] [query]

fuzzy search snippets by id

Options:
  -c, --cp               copy code to clipboard
  -j, --json             output in json format
  -l, --layout <layout>  print in specified layout (default: \\"iced\\")
  -h, --help             output usage information"
`;

exports[`Cli help option should print help page for tag command 1`] = `
"Usage: t|tag [options] [id]

view snippets by tag

Options:
  -c, --cp               copy code to clipboard
  -j, --json             output in json format
  -l, --layout <layout>  print in specified layout (default: \\"iced\\")
  -h, --help             output usage information"
`;

exports[`Cli help option should print help page for tag command 2`] = `
"Usage: t|tag [options] [id]

view snippets by tag

Options:
  -c, --cp               copy code to clipboard
  -j, --json             output in json format
  -l, --layout <layout>  print in specified layout (default: \\"iced\\")
  -h, --help             output usage information"
`;

exports[`Cli help option should print help page for view command 1`] = `
"Usage: v|view [options] [id]

view snippet with id

Options:
  -c, --cp               copy code to clipboard
  -j, --json             output in json format
  -l, --layout <layout>  print in specified layout (default: \\"iced\\")
  -h, --help             output usage information"
`;

exports[`Cli help option should print help page for view command 2`] = `
"Usage: v|view [options] [id]

view snippet with id

Options:
  -c, --cp               copy code to clipboard
  -j, --json             output in json format
  -l, --layout <layout>  print in specified layout (default: \\"iced\\")
  -h, --help             output usage information"
`;
